--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ h1 {
     margin-bottom: 1rem;
 }
 /* Main section */
+
+
 #addBook {
     background-color: #f2f1ef;
     color: #2b2928;
@@ -36,6 +38,7 @@ h1 {
     font-weight: 600;
     border: 2px solid #2b2928;
     transition: 0.2s;
+    margin-bottom: 2rem;
 }
 #addBook:hover {
     background-color: #2b2928;
@@ -45,13 +48,75 @@ h1 {
     background-color: #474442;
     color: #f2f1ef;
 }
+/* Book card*/
+
+#library {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+    padding: 1rem;
+}
+
+.book {
+    display: flex;
+    flex-direction: column;
+    width: 285px;
+    gap: 1.3rem;
+    padding: 2.8rem;
+    border: 3px solid #2b2928;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+.bookTitle, .bookAuthor, .bookPages{
+    font-family: 'Zen Antique Soft', serif;
+    color: #2b2928;
+}
+.bookTitle{
+    font-size: 1.2em;
+    font-weight: 800;
+}
+.bookPages{
+    margin-bottom: 1rem;
+}
+
+.readBtn, .deleteBtn {
+    color: #2b2928;
+    padding: 7px 25px;
+    font-weight: 600;
+    border: 2px solid #2b2928;
+    transition: 0.2s;
+}
+.complete{
+    background-color: #bacfae;
+    transition: 0.2s;
+}
+.complete:hover{
+    background-color: #d8f3c8;
+}
+.complete:active{
+    background-color: #cce4bd;
+}
+.incomplete{
+    background-color: #cfaeae;
+    transition: 0.2s;
+}
+.incomplete:hover{
+    background-color: #dfbcbc;
+}
+.incomplete:active{
+    background-color: #ebc5c5;
+}
+.deleteBtn{
+    background-color: #a54242;
+}
+
 
 /*Modal section*/
 
 
 #overlay {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     height: 100%;
@@ -116,7 +181,7 @@ label{
     width: 20px;
 }
 
-#submit {
+#submitBtn {
     border: none;
     padding: 12px 60px;
     color: #f2f1ef;
@@ -125,11 +190,11 @@ label{
     font-weight: bold;
 }
 
-#submit:hover{
+#submitBtn:hover{
     background-color: #3f3c3b;
 }
 
-#submit:active{
+#submitBtn:active{
     background-color: #524d4c;
 }
 
